kill me, electron wont bundle yagna no matter what

--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
       "dist",
       "node_modules",
       "package.json",
-      "binaries/"
+      "binaries"
     ],
     "afterSign": ".erb/scripts/notarize.js",
     "mac": {
