App Name Change

--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yagna-control-ui",
+  "name": "Qaiseo",
   "version": "0.0.1",
   "description": "A Control UI for Golem's Yagna CLI",
   "license": "MIT",
