--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
@@ -164,7 +164,7 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "Yagna_Control_UI",
+    "productName": "Qaiseo",
     "appId": "org.erb.YagnaControlUI",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
