--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     }
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "app-root-dir": "^1.0.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
@@ -94,10 +95,13 @@
     "extract-zip": "^2.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
+    "@redux-devtools/core": "^3.13.1",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
